Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,46 @@
 <p>Redsun is a Redmine plugin that replaces the existing search with a fast Apache Solr powered engine.</p>
 
 <h4>
-<a id="supported-redmine-versions" class="anchor" href="#supported-redmine-versions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Redmine Versions</h4>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h4>
+
+<p>Redsun will respect any viewing restrictions on records to make sure people will only see results they are supposed to see.</p>
+
+<h4>
+<a id="models" class="anchor" href="#models" aria-hidden="true"><span class="octicon octicon-link"></span></a>Models</h4>
+
+<p>Currently only four models are being indexed. We plan to add news and attachments in the future.</p>
+
+<ul>
+<li>Issues</li>
+<li>Journals (=Comments)</li>
+<li>Projects</li>
+<li>WikiPages</li>
+</ul>
+
+<h4>
+<a id="facets" class="anchor" href="#facets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Facets</h4>
+
+<ul>
+<li>Project</li>
+<li>Author</li>
+<li>Assigned To</li>
+<li>Status</li>
+<li>Tracker</li>
+<li>Priority</li>
+<li>Created on
+** last 7 days
+** last 30 days
+** last 3 months
+** last 6 months
+** over 1 year ago</li>
+<li>Updated on
+** last 7 days
+** last 30 days
+** last 3 months
+** last 6 months
+** over 1 year ago
+#### Supported Redmine Versions</li>
+</ul>
 
 <p>We have successfully used Redsun with Redmine 2.3-2.6. Please bear in mind that Redmine 3.x ist currently not supported, but we will probably create a compatible version soon.</p>
 
