Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,20 +60,17 @@
 <li>Status</li>
 <li>Tracker</li>
 <li>Priority</li>
-<li>Created on
-** last 7 days
-** last 30 days
-** last 3 months
-** last 6 months
-** over 1 year ago</li>
-<li>Updated on
-** last 7 days
-** last 30 days
-** last 3 months
-** last 6 months
-** over 1 year ago
-#### Supported Redmine Versions</li>
+<li>Created on</li>
+<li>Updated on</li>
 </ul>
+
+<h3>
+<a id="localization" class="anchor" href="#localization" aria-hidden="true"><span class="octicon octicon-link"></span></a>Localization</h3>
+
+<p>Currently, only German and English are being supported.</p>
+
+<h4>
+<a id="supported-redmine-versions" class="anchor" href="#supported-redmine-versions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Redmine Versions</h4>
 
 <p>We have successfully used Redsun with Redmine 2.3-2.6. Please bear in mind that Redmine 3.x ist currently not supported, but we will probably create a compatible version soon.</p>
 
