--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Redsun by dkd</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -72,7 +72,15 @@
 <h4>
 <a id="supported-redmine-versions" class="anchor" href="#supported-redmine-versions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Redmine Versions</h4>
 
-<p>We have successfully used Redsun with Redmine 2.3-2.6. Please bear in mind that Redmine 3.x ist currently not supported, but we will probably create a compatible version soon.</p>
+<h4>
+<a id="redmine-2x" class="anchor" href="#redmine-2x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Redmine 2.x</h4>
+
+<p>We have successfully used Redsun 1.0.3 with Redmine 2.3-2.6.</p>
+
+<h4>
+<a id="redmine-3x" class="anchor" href="#redmine-3x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Redmine 3.x</h4>
+
+<p>Please use Redsun &gt;= 1.0.4 if you are using Redmine 3.x</p>
 
 <h4>
 <a id="basic-installation" class="anchor" href="#basic-installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Installation</h4>
@@ -85,6 +93,10 @@
 <li>git clone <a href="mailto:git@github.com">git@github.com</a>:dkd/redsun.git redmine_redsun</li>
 <li>run bundle install</li>
 <li>rails g sunspot_rails:install</li>
+<li>bundle exec sunspot:solr:start</li>
+<li>bundle exec sunspot:solr:reindex</li>
+<li>restart Redmine</li>
+<li>enable Redsun within the plugin's settings section</li>
 </ul>
       </section>
       <footer>
